hopefully fixed the font not showing

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,6 @@ h1 {
 
 @font-face {
   font-family: 'Balatro';
-  src: url("../fonts/m6x11.ttf") format("truetype");
+  src: url("../fonts/m6x11.woff2") format("truetype");
   
 }
